# wrf-gazebo-bridge

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
config/: wrf_wind_config.yaml
gz_wind_plugin/: CMakeLists.txt  WindFieldSystem.cc
scripts/: preprocess_wrf.py
wind_gz_plugin/: CMakeLists.txt
wind_gz_plugin/include/: WindGzPlugin.hh
wind_gz_plugin/src/: WindGzPlugin.cc
wrf_gazebo_bridge/: __init__.py  wrf_wind_publisher_node.py  wrf_wrf_info.py
