<?xml version="1.0"?>
<package format="3">
  <name>wrf_gazebo_bridge</name>
  <version>0.0.1</version>
  <description>Bridge WRF netCDF wind field data into ROS 2 topics for use in simulation (e.g. Gazebo).</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

